--- a/contents/2020.03/03.md
+++ b/contents/2020.03/03.md
@@ -182,3 +182,64 @@
 ### Phase Core 되도록이면 직접 Debugging 개발 시작
 
 
+
+
+
+
+
+
+
+
+
+
+<br/>
+
+## 03.11
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* Table Dependency Injection
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### 선선선 콘테스트 준비 및 발표
+### DB Core 구조 개선 끝 & 변경 이유 및 변경 사항 공유 후 머지 (메일 보내기만 하면 됨!)
+### gtest 연구
+### Select Obejct 연구
+### Phase Core 되도록이면 직접 Debugging 개발 시작
+
+
+
+
+
+
+
+
+
+
+<br/>
+
+## 03.12
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* Table Dependency Injection
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### DB Core Module 독립성 확보
+### DB Core Test Project (Hello! Pluto!)
+### DB Core 구조 개선 끝 & 변경 이유 및 변경 사항 공유 후 머지 (메일 보내기만 하면 됨!)
+### gtest 연구
+### Select Obejct 연구
+### Phase Core 되도록이면 직접 Debugging 개발 시작
+
+
