--- a/contents/2020.03/03.md
+++ b/contents/2020.03/03.md
@@ -176,7 +176,7 @@
 * [기반] Phase, Alice UI, DB, Select
 
 ### 선선선 콘테스트 준비 및 발표
-### DB Core 구조 개선 끝 & 변경 이유 및 변경 사항 공유 후 머지 (메일 보내기만 하면 됨!)
+### DB Core 구조 개선 끝 & 변경 이유 및 변경 사항 공유 후 머지
 ### gtest 연구
 ### Select Obejct 연구
 ### Phase Core 되도록이면 직접 Debugging 개발 시작
@@ -206,8 +206,9 @@
 ### Main
 * [기반] Phase, Alice UI, DB, Select
 
-### 선선선 콘테스트 준비 및 발표
-### DB Core 구조 개선 끝 & 변경 이유 및 변경 사항 공유 후 머지 (메일 보내기만 하면 됨!)
+### DB Core Module 독립성 확보
+### DB Core Test Project (Hello! Pluto!)
+### DB Core 구조 개선 끝 & 변경 이유 및 변경 사항 공유 후 머지 (메일 이어서 계속 작성 중)
 ### gtest 연구
 ### Select Obejct 연구
 ### Phase Core 되도록이면 직접 Debugging 개발 시작
@@ -235,9 +236,10 @@
 ### Main
 * [기반] Phase, Alice UI, DB, Select
 
+### 사내 내부 자료구조, std로 변경
 ### DB Core Module 독립성 확보
 ### DB Core Test Project (Hello! Pluto!)
-### DB Core 구조 개선 끝 & 변경 이유 및 변경 사항 공유 후 머지 (메일 보내기만 하면 됨!)
+### DB Core 구조 개선 끝 & 변경 이유 및 변경 사항 공유 후 머지 (메일 이어서 계속 작성 중)
 ### gtest 연구
 ### Select Obejct 연구
 ### Phase Core 되도록이면 직접 Debugging 개발 시작
