--- a/contents/2020.03/03.md
+++ b/contents/2020.03/03.md
@@ -276,3 +276,39 @@
 ### Phase Core 되도록이면 직접 Debugging 개발 시작
 
 
+
+
+
+
+
+
+
+
+
+
+<br/>
+
+## 03.16
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* Table Dependency Injection
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### UI 개발 시, 그냥 UI 개발만 하지말고, 해당 도메인을 이해한 후 범용적으로 해결하자
+* ex) Vector Phase의 선택적 한 축 Disable, 단순 UI 하나를 Disable 해서 해결한다 ? -> x
+* -> Plane Phase를 통해, 평면을 정의하고, 좌표계 변환을 통해 해결한다.
+### 소프트웨어 테스트 방법론 공부
+### DB Core Test Project (Hello! Pluto!)
+### DB Core 구조 개선 끝 & 변경 이유 및 변경 사항 공유 후 머지 (메일 이어서 계속 작성 중)
+### gtest 연구
+### Select Obejct 연구
+### Phase Core 되도록이면 직접 Debugging 개발 시작
+
+
+
