--- a/contents/2020.03/03.md
+++ b/contents/2020.03/03.md
@@ -391,3 +391,34 @@
 
 
 
+
+
+
+<br/>
+
+## 03.23
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* Table Dependency Injection
+
+### Main
+* [기반] Phase, DB Core(Pluto)
+
+### DB Core 올리기, 설득용 발표 준비
+### Phase Core 담당됨...
+### 소프트웨어 테스트 방법론 공부
+### DB Core Test Project (Hello! Pluto!)
+### DB Core 구조 개선 끝 & 변경 이유 및 변경 사항 공유 후 머지 (메일 이어서 계속 작성 중)
+### gtest 연구
+### Select Obejct 연구
+
+
+
+
+
+
+
