--- a/contents/2020.04/04.md
+++ b/contents/2020.04/04.md
@@ -192,3 +192,23 @@
 ### Phase Merge
 ### QA 문서화
 ### 소프트웨어 테스트 방법론 공부
+
+
+
+
+
+<br/>
+
+## 04.17
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* DB Core 자료 정리
+
+### Main
+* [기반] Phase, DB Core(Pluto)
+
+### QA 문서화
+### 소프트웨어 테스트 방법론 공부
