--- a/contents/2020.05/05.md
+++ b/contents/2020.05/05.md
@@ -106,3 +106,28 @@
 ### 소프트웨어 테스트 방법론 공부
 
 
+
+
+
+
+
+
+
+
+
+<br/>
+
+## 05.13
+
+### 공부, 정리할 것
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase
+* DB Core
+
+### GUID 구현 & 테스트 케이스 작성
+### STL 공부 & 정리
+### Phase Bug Fix
+### QA 문서화
+### 소프트웨어 테스트 방법론 공부
+
+
