--- a/contents/2020.05/05.md
+++ b/contents/2020.05/05.md
@@ -167,7 +167,7 @@
 
 <br/>
 
-## 05.16
+## 05.18
 
 ### 공부, 정리할 것
 * [Clean Code](/contents/BasicEducation/CleanCode.md)
@@ -195,7 +195,7 @@
 
 <br/>
 
-## 05.17
+## 05.19
 
 ### 공부, 정리할 것
 * [Clean Code](/contents/BasicEducation/CleanCode.md)
@@ -210,3 +210,24 @@
 
 
 
+
+
+
+
+
+
+
+<br/>
+
+## 05.20
+
+### 공부, 정리할 것
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase Core
+* DB Core
+
+### Phase, UI Interface Test 커버리지 확대
+### STL 공부 & 정리
+### Phase Bug Fix
+### QA 문서화
+### 소프트웨어 테스트 방법론 공부
