--- a/contents/2020.05/05.md
+++ b/contents/2020.05/05.md
@@ -293,3 +293,22 @@
 ### Phase Bug Fix
 ### QA 문서화
 ### 소프트웨어 테스트 방법론 공부
+
+
+
+
+
+<br/>
+
+## 05.26
+
+### 공부, 정리할 것
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase Core
+* DB Core
+
+### Phase, UI Interface Test 커버리지 확대
+### STL 공부 & 정리
+### Phase Bug Fix
+### QA 문서화
+### 소프트웨어 테스트 방법론 공부
