--- a/contents/2020.05/05.md
+++ b/contents/2020.05/05.md
@@ -307,6 +307,27 @@
 * Phase Core
 * DB Core
 
+### 개발자와 글쓰기 다 읽음!
+### Phase, UI Interface Test 커버리지 확대
+### STL 공부 & 정리
+### Phase Bug Fix
+### QA 문서화
+### 소프트웨어 테스트 방법론 공부
+
+
+
+
+
+<br/>
+
+## 05.26
+
+### 공부, 정리할 것
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase Core
+* DB Core
+
+### Phase Logger 구현 완료
 ### Phase, UI Interface Test 커버리지 확대
 ### STL 공부 & 정리
 ### Phase Bug Fix
