--- a/contents/2020.05/05.md
+++ b/contents/2020.05/05.md
@@ -333,3 +333,23 @@
 ### Phase Bug Fix
 ### QA 문서화
 ### 소프트웨어 테스트 방법론 공부
+
+
+
+
+
+<br/>
+
+## 05.27
+
+### 공부, 정리할 것
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase Core
+* DB Core
+
+### DialogPhase 코드 리뷰 오랫동안 했던 것(Pair Programming, Reviewer) Phase Branch에 머지
+### Phase, UI Interface Test 커버리지 확대
+### STL 공부 & 정리
+### Phase Bug Fix
+### QA 문서화
+### 소프트웨어 테스트 방법론 공부
