--- a/contents/2020.06/06.md
+++ b/contents/2020.06/06.md
@@ -153,6 +153,7 @@
 
 
 
+
 <br/>
 
 ## 06.09
@@ -168,4 +169,26 @@
 * STL 공부 & 정리
 
 ### 오늘 한 것
+* Phase History 재구현 완료, 다양한 테스트 케이스 확보 중
+
+
+
+
+
+<br/>
+
+## 06.10
+
+### Framework 개발 [주 업무] 
+* Phase Core
+* DB Core
+
+### 문서화 하고 싶은 것
+* QA 문서화
+* Github 최신 기술
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* STL 공부 & 정리
+
+### 오늘 한 것
+* 일단 DB Core 성능 개선한 거 머지 준비!
 * Phase History 재구현 완료, 다양한 테스트 케이스 확보 중
